# ba-thesis-routing

./: CMakeLists.txt  README.md  main.cpp
algorithm/: CMakeLists.txt  algorithm.h  bfs.cpp  bfs.h  bfs_dag.cpp  bfs_dag.h  cluster_dijkstra.cpp  cluster_dijkstra.h  limited_dijkstra.cpp  limited_dijkstra.h  pq_dijkstra.cpp  pq_dijkstra.h  set_dijkstra.cpp  set_dijkstra.h  solution.h  square_dijkstra.cpp  square_dijkstra.h
algorithm/clustering/: clustering.h  dsu.cpp  dsu.h  edge_weight.cpp  edge_weight.h
generator/: CMakeLists.txt  discrete_distribution.cpp  discrete_distribution.h  distribution.cpp  distribution.h  dual_homed.cpp  dual_homed.h  fat_tree.cpp  fat_tree.h  generator.h  grid.cpp  grid.h  normal_distribution.cpp  normal_distribution.h  random.cpp  random.h
graph/: CMakeLists.txt  edge.h  graph.cpp  graph.h  graph_builder.cpp  graph_builder.h
testing/: CMakeLists.txt  solution_family.cpp  solution_family.h  stats.cpp  stats.h  validator.cpp  validator.h
text/: 0_abstract.tex  1_intro.tex  2_known.tex  3_testing.tex  4_algos.tex  5_results.tex  6_references.tex  _annotation_rus.tex  _title_page.tex  main.tex
util/: CMakeLists.txt  util.cpp  util.h
